--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be30df552efb401682847623325d366b",
+       "model_id": "c624cd6ae85948b998d91f2de71c4357",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -207,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f11226990dc74891890daea6d113ce81",
+       "model_id": "63073733ecc34e55bf9d3f2b007f0f33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +239,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 该步骤会比较耗时\n",
     "index_nyc = arctern.sjoin(pickup_points, nyc_arctern_4326, 'within')\n",
     "is_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
@@ -265,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d01d84f285de4f73accd3bf56923acdf",
+       "model_id": "f9b62daa4b1c49cdac87c36696e7aba5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "571276809c974e87bf703f0e7a26377a",
+       "model_id": "00e2b517c3fb4991930054ea9f903b9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +321,6 @@
     }
    ],
    "source": [
-    "# 该步骤会比较耗时\n",
     "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
     "index_nyc = arctern.sjoin(dropoff_points, nyc_arctern_4326, 'within')\n",
     "is_dorpoff_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "Name: fare_amount, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3405004c4d2c4831bf42aa703ce32089",
+       "model_id": "7cd7df46afee4a928d2e0d4aac2870bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +401,7 @@
    ],
    "source": [
     "import json\n",
-    "with open(\"map_config.json\", \"r\") as f:\n",
+    "with open(\"/tmp/map_config.json\", \"r\") as f:\n",
     "    config = json.load(f)\n",
     "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(pickup_in_nyc)})},config=config)"
    ]
@@ -410,12 +410,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们认为离道路较远的数据同样为噪点(默认离道路距离大于100m视为较远),通过匹配纽约市的道路网将偏离道路较远的租车数据过滤掉，首先加载纽约市道路网："
+    "我们认为离道路较远的数据同样为噪点（默认离道路距离大于 100m 视为较远），通过匹配纽约市的道路网将偏离道路较远的租车数据过滤掉，首先加载纽约市道路网："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,9 +472,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae45b76c2fe0438c9f30cfd240e0c7fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_pickup)})},config=config)"
    ]
@@ -488,43 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dropoff_points = arctern.ST_Point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
-    "projectioned_dropoff = arctern.nearest_location_on_road(roads, dropoff_points)\n",
-    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_dropoff)})},config=config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "将绑路后的乘客上下车位置信息添加到dataframe near_road_df 中："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "on_road_nyc_df.insert(16,'pickup_on_road',projectioned_pickup)\n",
-    "on_road_nyc_df.insert(17,'dropoff_on_road',projectioned_dropoff)\n",
-    "on_road_nyc_df.fare_amount.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "我们按照交易额提取费用大于 50 美元的数据，并绘制出租车的上车点和下车点："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -537,14 +523,92 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6712264cfd5c45ddbd171a4a46fca773",
+       "model_id": "a2c84075ceeb4fda81201f63051c821c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                            pickup\n",
-       "0    POINT (-73.983795 40.737956)\n",
-       "1    POINT (-73.7…"
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dropoff_points = arctern.ST_Point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
+    "projectioned_dropoff = arctern.nearest_location_on_road(roads, dropoff_points)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_dropoff)})},config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将绑路后的乘客上下车位置信息添加到 dataframe near_road_df 中："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    194812.000000\n",
+       "mean          9.692408\n",
+       "std           6.976446\n",
+       "min           2.500000\n",
+       "25%           5.700000\n",
+       "50%           7.700000\n",
+       "75%          11.000000\n",
+       "max         175.000000\n",
+       "Name: fare_amount, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "on_road_nyc_df.insert(16,'pickup_on_road',projectioned_pickup)\n",
+    "on_road_nyc_df.insert(17,'dropoff_on_road',projectioned_dropoff)\n",
+    "on_road_nyc_df.fare_amount.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "综上我们完成了数据过滤，接下来我们将根据交易额和直线距离分析出租车的运营情况。\n",
+    "\n",
+    "我们按照交易额提取费用大于 50 美元的数据，并绘制出租车的上车点和下车点："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1131667d918d41029e682218d94be0dc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'pickup':                                          pickup\n",
+       "0    POINT (-73.7581163154743 40.6749…"
       ]
      },
      "metadata": {},
@@ -567,24 +631,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    195479.000000\n",
-       "mean       3150.718965\n",
-       "std        3321.422772\n",
+       "count    194155.000000\n",
+       "mean       3114.627009\n",
+       "std        3233.474564\n",
        "min           0.000000\n",
-       "25%        1226.479199\n",
-       "50%        2091.979381\n",
-       "75%        3751.810025\n",
-       "max       35395.487197\n",
+       "25%        1224.656797\n",
+       "50%        2088.272336\n",
+       "75%        3733.545547\n",
+       "max       35418.698339\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -617,14 +681,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7fecce87918409d8ec9815e8526f28f",
+       "model_id": "b9dc7efe2e5a4066a0e3e210768b3024",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                             pickup\n",
-       "0     POINT (-73.781487 40.644855)\n",
-       "1     POINT (-7…"
+       "KeplerGl(data={'pickup':                                           pickup\n",
+       "0     POINT (-73.7814851559617 40.64…"
       ]
      },
      "metadata": {},
@@ -642,13 +705,6 @@
     "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(nyc_dist_gt.dropoff)})\n",
     "              })"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -667,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
