--- a/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a61d47361bdf4fc28245dc81661be546",
+       "model_id": "ea393613b60f4db28aef8695f2fbef7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -193,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44fa9f8e3af9435baf71e95d6a31357f",
+       "model_id": "2ac5345fe6f44acbb2412963009337e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +239,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this step will cost some time\n",
     "index_nyc = arctern.sjoin(pickup_points, nyc_arctern_4326, 'within')\n",
     "is_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
@@ -263,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cbc51c786f2410791771efe4fd64aba",
+       "model_id": "727ad8febd77425588970ee13e409e2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b8b8db22e8b485aa5ac6114c9acfbd6",
+       "model_id": "6ca9b76374b94259b8ddebde38786496",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,7 +321,6 @@
     }
    ],
    "source": [
-    "# this step will cost some time\n",
     "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
     "index_nyc = arctern.sjoin(dropoff_points, nyc_arctern_4326, 'within')\n",
     "is_dorpoff_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
@@ -367,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot pick-up and drop-off locations with transaction amount greater than $50:"
+    "After filtering the data according to the skeleton map of New York City, we found that some locations were far from the road, and even plotted on certain buildings:"
    ]
   },
   {
@@ -385,14 +387,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baa1027af5934e7085516e5e95e3794c",
+       "model_id": "73d23702fba648c6ba0653fa0f4f9455",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                            pickup\n",
-       "0    POINT (-73.983795 40.737956)\n",
-       "1    POINT (-73.7…"
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
       ]
      },
      "metadata": {},
@@ -400,64 +400,81 @@
     }
    ],
    "source": [
-    "fare_amount_gt_50 = in_nyc_df[in_nyc_df.fare_amount > 50]\n",
-    "pickup_50 = arctern.ST_Point(fare_amount_gt_50.pickup_longitude,fare_amount_gt_50.pickup_latitude)\n",
-    "dropoff_50 = arctern.ST_Point(fare_amount_gt_50.dropoff_longitude,fare_amount_gt_50.dropoff_latitude)\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(pickup_50)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(dropoff_50)})\n",
-    "              })"
+    "import json\n",
+    "with open(\"/tmp/map_config.json\", \"r\") as f:\n",
+    "    config = json.load(f)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(pickup_in_nyc)})},config=config)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the straight-line distance between the pick-up and the drop-off locations:"
+    "We think that the data farther away from the road is noisy data, which is more than 100 meters from the road. So we have to filter the noisy data by the New York City road network.\n",
+    "\n",
+    "First load the New York City road network:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    195479.000000\n",
-       "mean       3150.718965\n",
-       "std        3321.422772\n",
-       "min           0.000000\n",
-       "25%        1226.479199\n",
-       "50%        2091.979381\n",
-       "75%        3751.810025\n",
-       "max       35395.487197\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nyc_distance=arctern.ST_DistanceSphere(arctern.ST_Point(in_nyc_df.pickup_longitude,\n",
-    "                                                        in_nyc_df.pickup_latitude),\n",
-    "                                       arctern.ST_Point(in_nyc_df.dropoff_longitude,\n",
-    "                                                        in_nyc_df.dropoff_latitude))\n",
-    "nyc_distance.index=in_nyc_df.index\n",
-    "nyc_distance.describe()"
+    "import arctern\n",
+    "nyc_road=pd.read_csv(\"/tmp/nyc_road.csv\", dtype={\"roads\":\"string\"}, delimiter='|')\n",
+    "roads=arctern.ST_GeomFromText(nyc_road.roads)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the pick-up and the drop-off locations for trips with a straight-line distance greater than 20 kilometers, and plot them."
+    " Filter data with both pick-up locations and the drop-off locations:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickup_points = arctern.ST_Point(in_nyc_df.pickup_longitude,in_nyc_df.pickup_latitude)\n",
+    "dropoff_points = arctern.ST_Point(in_nyc_df.dropoff_longitude,in_nyc_df.dropoff_latitude)\n",
+    "is_pickup_near_road = arctern.near_road(roads, pickup_points)\n",
+    "is_dropoff_near_road = arctern.near_road(roads, dropoff_points)\n",
+    "is_resonable = [is_pickup_near_road[idx] & is_dropoff_near_road[idx] for idx in range(0,len(is_dropoff_near_road)) ]\n",
+    "in_nyc_df=in_nyc_df.reset_index()\n",
+    "on_road_nyc_df=in_nyc_df[pd.Series(is_resonable)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After filtering out the data far away from the road, we bind the pick-up location to the nearest road to generate a new pick-up location within the road :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickup_points = arctern.ST_Point(on_road_nyc_df.pickup_longitude,on_road_nyc_df.pickup_latitude)\n",
+    "projectioned_pickup = arctern.nearest_location_on_road(roads, pickup_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the pick-up location within the road:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -470,14 +487,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "030c14a2491f4676bf83838bff0b339b",
+       "model_id": "90e96b8f845e4da892d5c5dc94254806",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                             pickup\n",
-       "0     POINT (-73.781487 40.644855)\n",
-       "1     POINT (-7…"
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
       ]
      },
      "metadata": {},
@@ -485,28 +500,213 @@
     }
    ],
    "source": [
-    "nyc_with_distance=pd.DataFrame({\"pickup_longitude\":in_nyc_df.pickup_longitude,\n",
-    "                                \"pickup_latitude\":in_nyc_df.pickup_latitude,\n",
-    "                                \"dropoff_longitude\":in_nyc_df.dropoff_longitude,\n",
-    "                                \"dropoff_latitude\":in_nyc_df.dropoff_latitude,\n",
-    "                                \"sphere_distance\":nyc_distance\n",
-    "                               })\n",
-    "\n",
-    "nyc_dist_gt = nyc_with_distance[nyc_with_distance.sphere_distance > 20e3]\n",
-    "pickup_gt = arctern.ST_Point(nyc_dist_gt.pickup_longitude,nyc_dist_gt.pickup_latitude)\n",
-    "dropoff_gt = arctern.ST_Point(nyc_dist_gt.dropoff_longitude,nyc_dist_gt.dropoff_latitude)\n",
-    "\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(pickup_gt)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(dropoff_gt)})\n",
-    "              })"
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_pickup)})},config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bind the drop-off location to the nearest road to generate a new drop-off location within the road:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "163942845c15434180eada3a06bba891",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dropoff_points = arctern.ST_Point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
+    "projectioned_dropoff = arctern.nearest_location_on_road(roads, dropoff_points)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_dropoff)})},config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After bind the pick-up location and drop-off loaction to the road, add the information to dataframe near_road_df:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    194812.000000\n",
+       "mean          9.692408\n",
+       "std           6.976446\n",
+       "min           2.500000\n",
+       "25%           5.700000\n",
+       "50%           7.700000\n",
+       "75%          11.000000\n",
+       "max         175.000000\n",
+       "Name: fare_amount, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "on_road_nyc_df.insert(16,'pickup_on_road',projectioned_pickup)\n",
+    "on_road_nyc_df.insert(17,'dropoff_on_road',projectioned_dropoff)\n",
+    "on_road_nyc_df.fare_amount.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Until now, data is cleaned, we can continue to do the analysis. \n",
+    "\n",
+    "Plot pick-up and drop-off locations with transaction amount greater than $50:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "01ba9d8385d84803870a44fe6e44b6ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'pickup':                                          pickup\n",
+       "0    POINT (-73.7581163154743 40.6749…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fare_amount_gt_50 = on_road_nyc_df[on_road_nyc_df.fare_amount > 50]\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(fare_amount_gt_50.pickup_on_road)}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(fare_amount_gt_50.dropoff_on_road)})\n",
+    "              })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the straight-line distance between the pick-up and the drop-off locations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    194155.000000\n",
+       "mean       3114.627009\n",
+       "std        3233.474564\n",
+       "min           0.000000\n",
+       "25%        1224.656797\n",
+       "50%        2088.272336\n",
+       "75%        3733.545547\n",
+       "max       35418.698339\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nyc_distance=arctern.ST_DistanceSphere(on_road_nyc_df.pickup_on_road, on_road_nyc_df.dropoff_on_road)\n",
+    "nyc_distance.index=on_road_nyc_df.index\n",
+    "nyc_distance.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the pick-up and the drop-off locations for trips with a straight-line distance greater than 20 kilometers, and plot them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "480e4d97c3e44fc58cdb18510271e58b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'pickup':                                           pickup\n",
+       "0     POINT (-73.7814851559617 40.64…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nyc_with_distance=pd.DataFrame({\"pickup\":on_road_nyc_df.pickup_on_road,\n",
+    "                                \"dropoff\":on_road_nyc_df.dropoff_on_road,\n",
+    "                                \"sphere_distance\":nyc_distance\n",
+    "                               })\n",
+    "\n",
+    "nyc_dist_gt = nyc_with_distance[nyc_with_distance.sphere_distance > 20e3]\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(nyc_dist_gt.pickup)}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(nyc_dist_gt.dropoff)})\n",
+    "              })"
+   ]
   }
  ],
  "metadata": {
