--- a/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
@@ -547,7 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After bind the pick-up location and drop-off loaction to the road, add the information to dataframe near_road_df:"
+    "After bind the pick-up location and drop-off loaction to the road, add the information to on_road_nyc_df:"
    ]
   },
   {
