--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "将绑路后的乘客上下车位置信息添加到 dataframe near_road_df 中："
+    "将绑路后的乘客上下车位置信息添加到 on_road_nyc_df 中："
    ]
   },
   {
