--- a/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea393613b60f4db28aef8695f2fbef7f",
+       "model_id": "f57263b1b3b447dcad1d57a2fd64f0b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,10 +78,11 @@
    ],
    "source": [
     "import arctern\n",
+    "from arctern import GeoSeries\n",
     "from keplergl import KeplerGl\n",
     "\n",
-    "pickup_points = arctern.ST_Point(nyc_df.pickup_longitude,nyc_df.pickup_latitude)\n",
-    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':arctern.ST_AsText(pickup_points)})})"
+    "pickup_points = GeoSeries.point(nyc_df.pickup_longitude,nyc_df.pickup_latitude)\n",
+    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':pickup_points.to_wkt()})})"
    ]
   },
   {
@@ -138,8 +139,8 @@
     "nyc_zone=[json.dumps(shp) for shp in nyc_zone]\n",
     "# read the data with Arctern\n",
     "nyc_zone_series=pd.Series(nyc_zone)\n",
-    "nyc_zone_arctern=arctern.ST_GeomFromGeoJSON(nyc_zone_series)\n",
-    "arctern.ST_AsText(nyc_zone_arctern)"
+    "nyc_zone_arctern=GeoSeries.geom_from_geojson(nyc_zone_series)\n",
+    "nyc_zone_arctern.to_wkt()"
    ]
   },
   {
@@ -181,8 +182,9 @@
     "ident = Sridentify()\n",
     "ident.from_file('/tmp/taxi_zones/taxi_zones.prj')\n",
     "src_crs = ident.get_epsg()\n",
-    "nyc_arctern_4326 = arctern.ST_Transform(nyc_zone_arctern,f'EPSG:{src_crs}','EPSG:4326')\n",
-    "arctern.ST_AsText(nyc_arctern_4326)"
+    "nyc_zone_arctern.set_crs(f'EPSG:{src_crs}')\n",
+    "nyc_arctern_4326 = nyc_zone_arctern.to_crs(crs=\"EPSG:4326\")\n",
+    "nyc_arctern_4326.to_wkt()"
    ]
   },
   {
@@ -196,7 +198,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -209,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ac5345fe6f44acbb2412963009337e5",
+       "model_id": "d6c02570fec145c3a0ba5a73180c3c22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,7 +225,7 @@
     }
    ],
    "source": [
-    "KeplerGl(data={\"nyc_zones\": pd.DataFrame(data={'nyc_zones':arctern.ST_AsText(nyc_arctern_4326)})})"
+    "KeplerGl(data={\"nyc_zones\": pd.DataFrame(data={'nyc_zones':nyc_arctern_4326.to_wkt()})})"
    ]
   },
   {
@@ -239,8 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_nyc = arctern.sjoin(pickup_points, nyc_arctern_4326, 'within')\n",
-    "is_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
+    "index_nyc = arctern.within_which(pickup_points, nyc_arctern_4326)\n",
+    "is_in_nyc = index_nyc.map(lambda x: x  is not pd.NA )\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
    ]
   },
@@ -266,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "727ad8febd77425588970ee13e409e2e",
+       "model_id": "67d62c52d6724683b10d7c58f71b7b74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +283,7 @@
     }
    ],
    "source": [
-    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':arctern.ST_AsText(pickup_in_nyc)})})"
+    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':pickup_in_nyc.to_wkt()})})"
    ]
   },
   {
@@ -306,7 +308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ca9b76374b94259b8ddebde38786496",
+       "model_id": "f11bafccf9de40619e5c8cb71e3291f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,11 +323,11 @@
     }
    ],
    "source": [
-    "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
-    "index_nyc = arctern.sjoin(dropoff_points, nyc_arctern_4326, 'within')\n",
-    "is_dorpoff_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
+    "dropoff_points = GeoSeries.point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
+    "index_nyc = arctern.within_which(dropoff_points, nyc_arctern_4326)\n",
+    "is_dorpoff_in_nyc = index_nyc.map(lambda x: x is not pd.NA)\n",
     "dropoff_in_nyc=dropoff_points[is_dorpoff_in_nyc]\n",
-    "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':arctern.ST_AsText(dropoff_in_nyc)})})"
+    "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':dropoff_in_nyc.to_wkt()})})"
    ]
   },
   {
@@ -360,8 +362,7 @@
     }
    ],
    "source": [
-    "is_resonable = [is_dorpoff_in_nyc[idx] & is_in_nyc[idx] for idx in range(0,len(is_in_nyc)) ]\n",
-    "in_nyc_df=nyc_df[pd.Series(is_resonable)]\n",
+    "in_nyc_df=nyc_df[is_in_nyc & is_dorpoff_in_nyc]\n",
     "in_nyc_df.fare_amount.describe()"
    ]
   },
@@ -387,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73d23702fba648c6ba0653fa0f4f9455",
+       "model_id": "6ebc475b5e90402bb8f2860783d420b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -403,7 +404,7 @@
     "import json\n",
     "with open(\"/tmp/map_config.json\", \"r\") as f:\n",
     "    config = json.load(f)\n",
-    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(pickup_in_nyc)})},config=config)"
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':pickup_in_nyc.to_wkt()})},config=config)"
    ]
   },
   {
@@ -423,7 +424,7 @@
    "source": [
     "import arctern\n",
     "nyc_road=pd.read_csv(\"/tmp/nyc_road.csv\", dtype={\"roads\":\"string\"}, delimiter='|')\n",
-    "roads=arctern.ST_GeomFromText(nyc_road.roads)"
+    "roads=GeoSeries(nyc_road.roads)"
    ]
   },
   {
@@ -439,13 +440,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickup_points = arctern.ST_Point(in_nyc_df.pickup_longitude,in_nyc_df.pickup_latitude)\n",
-    "dropoff_points = arctern.ST_Point(in_nyc_df.dropoff_longitude,in_nyc_df.dropoff_latitude)\n",
+    "pickup_points = GeoSeries.point(in_nyc_df.pickup_longitude,in_nyc_df.pickup_latitude)\n",
+    "pickup_points.set_axis(in_nyc_df.index,inplace=True)\n",
+    "dropoff_points = GeoSeries.point(in_nyc_df.dropoff_longitude,in_nyc_df.dropoff_latitude)\n",
+    "dropoff_points.set_axis(in_nyc_df.index,inplace=True)\n",
+    "\n",
     "is_pickup_near_road = arctern.near_road(roads, pickup_points)\n",
     "is_dropoff_near_road = arctern.near_road(roads, dropoff_points)\n",
-    "is_resonable = [is_pickup_near_road[idx] & is_dropoff_near_road[idx] for idx in range(0,len(is_dropoff_near_road)) ]\n",
-    "in_nyc_df=in_nyc_df.reset_index()\n",
-    "on_road_nyc_df=in_nyc_df[pd.Series(is_resonable)]"
+    "\n",
+    "is_near_road = is_pickup_near_road & is_dropoff_near_road\n",
+    "\n",
+    "on_road_nyc_df = in_nyc_df[is_near_road]"
    ]
   },
   {
@@ -461,8 +466,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickup_points = arctern.ST_Point(on_road_nyc_df.pickup_longitude,on_road_nyc_df.pickup_latitude)\n",
-    "projectioned_pickup = arctern.nearest_location_on_road(roads, pickup_points)"
+    "pickup_points = GeoSeries.point(on_road_nyc_df.pickup_longitude,on_road_nyc_df.pickup_latitude)\n",
+    "pickup_points.set_axis(on_road_nyc_df.index,inplace=True)\n",
+    "projectioned_pickup = arctern.nearest_location_on_road(roads, pickup_points)\n",
+    "projectioned_pickup = GeoSeries(projectioned_pickup)"
    ]
   },
   {
@@ -487,7 +494,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90e96b8f845e4da892d5c5dc94254806",
+       "model_id": "4920095982704bf1a2a1f3c70ca70a0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,7 +507,7 @@
     }
    ],
    "source": [
-    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_pickup)})},config=config)"
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':projectioned_pickup.to_wkt()})},config=config)"
    ]
   },
   {
@@ -525,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "163942845c15434180eada3a06bba891",
+       "model_id": "459a361a4e9a45adb08cd08ee5b45439",
        "version_major": 2,
        "version_minor": 0
       },
@@ -538,9 +545,11 @@
     }
    ],
    "source": [
-    "dropoff_points = arctern.ST_Point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
+    "dropoff_points = GeoSeries.point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
+    "dropoff_points.set_axis(on_road_nyc_df.index,inplace=True)\n",
     "projectioned_dropoff = arctern.nearest_location_on_road(roads, dropoff_points)\n",
-    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_dropoff)})},config=config)"
+    "projectioned_dropoff = GeoSeries(projectioned_dropoff)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':projectioned_dropoff.to_wkt()})},config=config)"
    ]
   },
   {
@@ -558,9 +567,9 @@
     {
      "data": {
       "text/plain": [
-       "count    194812.000000\n",
-       "mean          9.692408\n",
-       "std           6.976446\n",
+       "count    194786.000000\n",
+       "mean          9.692384\n",
+       "std           6.976573\n",
        "min           2.500000\n",
        "25%           5.700000\n",
        "50%           7.700000\n",
@@ -604,13 +613,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01ba9d8385d84803870a44fe6e44b6ef",
+       "model_id": "1b1b693b12474fbba632aad949c05570",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                                          pickup\n",
-       "0    POINT (-73.7581163154743 40.6749…"
+       "KeplerGl(data={'pickup':                                             pickup\n",
+       "1693    POINT (-73.9837884927911 4…"
       ]
      },
      "metadata": {},
@@ -619,8 +628,8 @@
    ],
    "source": [
     "fare_amount_gt_50 = on_road_nyc_df[on_road_nyc_df.fare_amount > 50]\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(fare_amount_gt_50.pickup_on_road)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(fare_amount_gt_50.dropoff_on_road)})\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':fare_amount_gt_50.pickup_on_road.to_wkt()}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':fare_amount_gt_50.dropoff_on_road.to_wkt()})\n",
     "              })"
    ]
   },
@@ -639,13 +648,13 @@
     {
      "data": {
       "text/plain": [
-       "count    194155.000000\n",
-       "mean       3114.627009\n",
-       "std        3233.474564\n",
+       "count    194786.000000\n",
+       "mean       3113.344497\n",
+       "std        3232.008220\n",
        "min           0.000000\n",
-       "25%        1224.656797\n",
-       "50%        2088.272336\n",
-       "75%        3733.545547\n",
+       "25%        1224.650347\n",
+       "50%        2087.753029\n",
+       "75%        3730.790193\n",
        "max       35418.698339\n",
        "dtype: float64"
       ]
@@ -656,8 +665,9 @@
     }
    ],
    "source": [
-    "nyc_distance=arctern.ST_DistanceSphere(on_road_nyc_df.pickup_on_road, on_road_nyc_df.dropoff_on_road)\n",
-    "nyc_distance.index=on_road_nyc_df.index\n",
+    "on_road_nyc_df.pickup_on_road.set_crs(\"EPSG:4326\")\n",
+    "on_road_nyc_df.dropoff_on_road.set_crs(\"EPSG:4326\")\n",
+    "nyc_distance=on_road_nyc_df.pickup_on_road.distance_sphere(on_road_nyc_df.dropoff_on_road)\n",
     "nyc_distance.describe()"
    ]
   },
@@ -683,13 +693,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "480e4d97c3e44fc58cdb18510271e58b",
+       "model_id": "4b1a9ec7a528424391fbd6578eaf8aa5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                                           pickup\n",
-       "0     POINT (-73.7814851559617 40.64…"
+       "KeplerGl(data={'pickup':                                             pickup\n",
+       "21      POINT (-73.7814851559617 4…"
       ]
      },
      "metadata": {},
@@ -703,8 +713,8 @@
     "                               })\n",
     "\n",
     "nyc_dist_gt = nyc_with_distance[nyc_with_distance.sphere_distance > 20e3]\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(nyc_dist_gt.pickup)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(nyc_dist_gt.dropoff)})\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':nyc_dist_gt.pickup.to_wkt()}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':nyc_dist_gt.dropoff.to_wkt()})\n",
     "              })"
    ]
   }
